<?xml version="1.0"?>
<package format="3">
  <name>mapsim_steering</name>
  <version>1.0.0</version>
  <description>Forward kinematics of steering-wheels robots</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
